feat: 优化逻辑,简化代码